code/kube-scale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-static-ip
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: algorithm.micaelmarques.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-service
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: back-service
            port:
              number: 80
